--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       </ul>
     </nav>
   </header>
+
+  <!-- HERO -->
+
   <section class="hero container">
     <h2>Dedicated to the Craft of Building Websites</h2>
     <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest
@@ -52,8 +55,10 @@
         <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
       </section>
       <!--
+    
             Schedule
-          -->
+       
+        -->
       <section class=" teaser col-1-3">
         <h5>Schedule</h5>
         <a href="schedule.html">
